--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "lodash": "^4.0.0",
     "react": "^0.14.5",
     "react-addons-css-transition-group": "^0.14.5",
